--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "babel src -d build",
     "start:dev": "nodemon --watch src --exec \"npm run build && node build/index.js\"",
-    "start": "node build/index.js"
+    "start": "npm run build && node build/index.js"
   },
   "author": "Ben",
   "license": "ISC",
