--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "simple way to get ptt's news",
   "main": "index.js",
   "scripts": {
-    "build": "babel src -d build",
+    "build": "babel src -d build && npm run copyfile",
+    "copyfile": "babel public --out-dir build/public --copy-files",
     "start:dev": "nodemon --watch src --exec \"npm run build && node build/index.js\"",
     "start": "npm run build && node build/index.js"
   },
@@ -14,7 +15,8 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "cheerio": "^1.0.0-rc.2",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
