--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.3",
     "morgan": "^1.9.0",
+    "puppeteer": "^1.14.0",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0"
   }
 }
