--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "babel src -d build && npm run copyfile",
     "copyfile": "babel public --out-dir build/public --copy-files",
     "start:dev": "nodemon --watch src --exec \"npm run build && node build/index.js\"",
-    "start": "npm run build && node build/index.js"
+    "start": "npm install && npm run build && node build/index.js"
   },
   "author": "Ben",
   "license": "ISC",
